@@ -1,4 +1,4 @@
-$Id: History,v 1.4 1999-04-30 09:12:47 kurasige Exp $
+$Id: History,v 1.5 1999-05-03 01:52:25 kurasige Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,9 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+- May 3,  99 H.Kurashige (procman-01-00-03a)
+- Add G4ProcessManager::GetProcessActivation 
+
 - Apr 30, 99 H.Kurashige (procman-01-00-03)
 - Remove G4EnergyLossTable from G4IVRestDiscreteProcess and 
   G4IVContinousDiscreteProcess (Laszlo)
